

Improved Find menu: now can find several bytes and open Hexadecimal Editor on the results list
Improved Audio to .mid exporter: allow changing instrument
Improved Text Aventure Debugging: 
-Improved detection of Daad aventures
-Now you can render any image from a Speccy Text Adventure (supported parsers: Quill, Paws, Daad, Gac)

Improved TBBlue turbo setting: make it by default limited on NextZXOS
Improved TBBlue .zsf snapshots to include all info from port 123b (previous TBBlue .zsf snapshots are incompatible with this version, sorry!)

Improved Debugging: 
-Mouse accions: click (toggle breakpoint, change registers), scrolling up/down by using the mouse wheel
-Can now browse Basic variables on ZX Spectrum, ZX81 and ZX80
-Added Window View Sensors to graph internal emulation sensors, performance, statistics, etc
-Allow to define up to 100 breakpoints from menu
-Preserve step mode when assembling

Improved ZX Vision menu interface:
-Added setting to pause cpu emulation on menu when multitask active
-Added Degraded ZX Desktop Fill Type
-Added Accessibility->GUI settings as a quick way to enable some GUI enhancements: high contrast style, hotkeys, etc
-Show in file selector when a file can be expanded
-Improved screen file previews: any file size of 6912 bytes is guessed as Spectrum screen
-Maximizing windows now take care of size of ZX Desktop, when setting "Open menu on ZX Desktop" is enabled
-Added item to reduce+rearrange windows
-Added some graphical meters on AY Registers, Core Statistics
-Colour palette window now shows all colours that fit in the window
-View sprite legend now adapts to size
-Added setting to disable boxes around lower and upper ZX Desktop Buttons


Fixed file previews on corrupted files: pzx, tap
Fixed rearranging windows and using total window height
Fixed Next ULA Scroll to use registers 0x26 and 0x27
Fixed Next tbblue port 123b behaviour: 48kb ram paging, shadow display, 3bit offset, read access