@@ -192,9 +192,6 @@ https://www.zxuno.com/forum/viewtopic.php?t=4091
 -Número gráficos limitar a maximo 256 (en quill, paws, daad, gac)
 
 
--modos adicionales Next layer 2
-
-
 -agregar sensor temperatura cpu linux
 
 
