@@ -20,8 +20,10 @@ Improved Text Aventure Debugging:
 -Improved detection of Daad aventures
 -Now you can render any image from a Speccy Text Adventure (supported parsers: Quill, Paws, Daad, Gac)
 
-Improved TBBlue turbo setting: make it by default limited on NextZXOS
-Improved TBBlue .zsf snapshots to include all info from port 123b (previous TBBlue .zsf snapshots are incompatible with this version, sorry!)
+Improved TBBlue emulation:
+-Turbo setting: make it by default limited on NextZXOS
+-ZSF snapshots include all info from port 123b (previous TBBlue .zsf snapshots are incompatible with this version, sorry!)
+-Added a splash message when changing Layer 2 modes
 
 Improved Debugging: 
 -Mouse accions: click (toggle breakpoint, change registers), scrolling up/down by using the mouse wheel
